style.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section{display:block;}body{line-height:1;}ol, ul{list-style:none;}blockquote, q{quotes:none;}blockquote:before, blockquote:after,q:before, q:after{content:'';content:none;}table{border-collapse:collapse;border-spacing:0;}img{width:100%;}

h1{
    font-family: proxima-nova, sans-serif;
    font-weight: 800;
    font-style: normal;
    font-size: 5.5em;
    color: #242424;
    padding-bottom: .1em;
}

h2{
    font-family: depot-new-web, sans-serif;
    font-weight: 300;
    font-size: 1.5em;
    line-height: 1.8em;
    color: #242424;
    
}

h3{
    font-family: depot-new-web, sans-serif;
    font-weight: 400;
    font-size: 1.4em;
    line-height: 1.5em;
    color: #242424;
}

h4{
    font-family: proxima-nova, sans-serif;
    font-weight: 500;
    font-size: 1.2em;
    text-transform: uppercase;
    color: #242424;
    padding-left: 1.5em;
    padding-bottom: 1.3em;
}

p{
    font-family: depot-new-web, sans-serif;
    font-weight: 300;
    font-size: 1em;
    line-height: 1.5em;
    color: #242424;
}

button{
    cursor: pointer;
    background: none;
    padding: .5em 1em;
    font-family: proxima-nova, sans-serif;
    font-weight: 500;
    font-size: 1em;
    border: #242424 solid 2px;
    border-radius: 4px;
    transition: ease .3s;
}

button:hover{
    box-shadow: 0 .5em 1em rgba(0, 0, 0, 0.2);
    transform: translateY(-.2em)
}

@media only screen and (max-width: 70em) {
    h1{font-size: 4em}
    h2{font-size: 1.3em}
    h3{font-size: 1.2em}
    h4{font-size: 1em}
}

@media only screen and (max-width: 50em) {
    h1{font-size: 3.3em}
    h2{font-size: 1.2em}
}


/*---------------------NAVIGATION-----------------------*/

.top_bar{display: none;}

.nav_back_arrow{display: none;}

main{padding-left: 12em;} 

nav{
    height: 100%;
    width: 12em;
    position: fixed;
    z-index: 101;
    top: 0;
    left: 0;
    background-color: white;
    border-right: solid #F1F1F1 2px;
    transition: ease .3s;
}

nav:hover{
    padding-left: 1em;
    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
}

.logo{
    width: 4em;
    margin: 2em;
}

nav ul{
    position: absolute;
    top: 43%;
    list-style: none;
    padding-left: 1.6em;
    font-size: 1.2em;
}

nav a{
    text-decoration: none;
    line-height: 2.5em;
    font-family: proxima-nova, sans-serif;
    font-weight: 300;
    font-style: normal;
    color: #242424;
}

.social{
    position: absolute;
    bottom: 1.5em;
    padding-left: 1.3em;
}

.social img{
    width: 1.1em;
    padding: 0 .9em;
}

/*Optimizing for wide and short monitors*/
@media only screen and (min-width: 90em) {
    nav{padding-left: 2em}
    nav:hover{padding-left: 3em}
    .social{padding-left: .2em}
    main{padding-left: 14em;}
}

@media only screen and (max-height: 30em) {
    .logo{width: 2.5em}
    nav ul{top: 35%;}
    nav a{line-height: 2em}
    }

/*Implementing sliding navigation drawer*/
@media only screen and (max-width: 50em) {
    nav{transform: translateX(-100%);}
    
    nav:hover{padding-left: 0;}
    
    main{
        padding-left: 0;
        margin-left: 0;
        padding-top: 5em;
    }
    
    nav ul{top: 30%}
    
    nav a{line-height: 3em;}
    
    .top_bar{
        outline: solid #F1F1F1 2px;
        z-index: 99;
        background-color: rgba(255, 255, 255, 1);
        height: 5em;
        display: flex;
        position: fixed;
        width: 100%;
    }
    
    .drawer{
        position: absolute;
        margin-top: 1.5em;
        margin-left: 2em;
        width:33px;
        cursor: pointer;
    }

    .logo_bar{
        width: 3em;
        margin: 1em auto;
    }
    
    /*Optimizing landscape mobile screens*/
    @media only screen and (max-height: 30em) {
        nav ul{top: 23%;}
        nav a{line-height: 2.2em}
    }
    
    /*"Moving" the logo by removing nav logo and now showing top bar logo*/
    .logo{
        display: none;
    }
    
    .nav_back_arrow{
        position: absolute;
        margin-top: 1.5em;
        margin-left: 1.5em;
        width: 30px;
        cursor: pointer;
        display: block;
    }
    
    .nav_shadow{
        display: none;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 100;
        background-color: rgba(0, 0, 0, 0.3);
        height: 100%;
        width: 100%;
}
}

/*For Javascript to toggle*/
.nav_active{
    transform: translateX(0%);
    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1);
}
.nav_shadow_active{display: block;}

/*---------------------INTRO-----------------------*/


.intro h2{
    max-width: 27em;
}

.intro img{
    margin-top: 1em;
    width: 13em;
}

.intro{
    max-width: 68em;
    padding: 15vh 5em;
    margin: 0 auto; 
}

.intro_container{
    background-color: #F8F8F8;
    margin-bottom: 3em;
}

@media only screen and (max-width: 50em) {
    .intro{padding: 14vh 2.5em;}
    .intro img{width: 10em;}
    .intro_container{margin-bottom: 1em}
}



/*---------------------UX BANNERS-----------------------*/

.ux_banners{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(16, 7em);
    column-gap: 1.5em;
    max-width: 68em;
    margin: 0 auto 6em auto;
    padding: 0 2.5%;
    filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.15));
    -webkit-filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.15));
}

/*The new auto rows are to accomadate text that has reflowed to the point where it would have exited the container (due to long taglines)*/
@media only screen and (max-width: 35em) {
    .ux_banners{grid-template-rows: repeat(2, 6em) auto auto repeat(2, 6em) auto auto repeat(2, 6em) auto auto repeat(4, 6em)}
    .uxb_section_heading{padding-top: 3.5em;}
    .ux_banners h1{font-size: 2.7em;}
}

.uxb_section_heading{
    grid-row: 1;
    grid-column: 1/-1;
    align-self: end
}

.ux_banners h3, .ux_banners h1{
    color: #FFF;
}

.ux_banners button{
    color: #FFF;
    margin-top: 2em;
    border: #FFF solid 2px;
}

.ux_banners button:hover{
    color: #242424;
    background-color: #FFF;
}

.ux_banners img{
    object-fit: contain;
    max-height: 38em;
    -webkit-filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.1));
    filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.1));
    transition: ease .3s;
}

.ux_banners img:hover{
    transform: translateY(-1.5em);
}

/*---------*/

.mobell_text{
    z-index: 2;
    grid-column: 1/4;
    grid-row: 3;
    padding-left: 8%;
    text-align: end;
}

.cp_events_text{
    z-index: 3;
    grid-column: 3/6;
    grid-row: 7;
    padding-right: 8%; 
    max-width: 60ch;
}

.slo_transit_text{
    z-index: 4;
    grid-column: 1/4;
    grid-row: 11;
    padding-left: 8%; 
    text-align: end;
}

.mobell_app{
    grid-column: 4/6;
    grid-row: 1/7;
    z-index: 2;
    margin-right: 15%;
    align-self: center;
}

.cp_events_app{
    grid-column: 1/3;
    grid-row: 5/11;
    z-index: 3;
    margin-left: 15%;
    align-self: center;
}

.slo_transit_app{
    grid-column: 4/6;
    grid-row: 9/15;
    z-index: 4;
    margin-right: 15%;
    align-self: center;
}

/*Keeping device from lining up awkwardly with color background*/
@media only screen and (max-width: 60em) {
    .mobell_app{transform: translateY(4em)}
    .cp_events_app{transform: translateY(4em)}
    .slo_transit_app{transform: translateY(4em)}
}

@media only screen and (max-width: 41em) {
    .mobell_app{transform: translateY(0)}
    .cp_events_app{transform: translateY(0)}
    .slo_transit_app{transform: translateY(0)}
    .ux_banners img:hover{transform: translateY(0)}
}

.mobell_color{
    border-top-left-radius: 1em;
    border-top-right-radius: 1em;
    z-index: 1;
    grid-row: 2/6;
    grid-column: 1/6;
    width: 100%;
    height: 100%;
    background-color: rgb(238, 171, 0);
}

.cp_events_color{
    z-index: 2;
    grid-row: 6/10;
    grid-column: 1/6;
    width: 100%;
    height: 100%;
    background-color: rgb(3, 86, 66);
}

.slo_transit_color{
    z-index: 3;
    grid-row: 10/16;
    grid-column: 1/6;
    width: 100%;
    height: 100%;
    background-color: rgb(16, 79, 163);
}

/*---------*/

.more_ux{
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
    z-index: 10;
    grid-column: 1/-1;
    grid-row: 14/18;
    background-color: #F8F8F8;
    background-image: url(media/more_ux.png);
    background-position: 40% 40%;
    background-repeat: no-repeat;
    background-size: cover;
}

.more_ux_text{
    margin-top: 6em;
    margin-left: 10%;
}

.more_ux_text h1{
    color: #242424;
}

.more_ux_text button{
    color: #242424;
    border: #242424 solid 2px;
    margin-top: 1em;
}

.more_ux_text button:hover{background: none}


/*---------------------REFERENCE-----------------------*/

.reference{
    padding: 7em 2em;
    text-align: center;
    margin-bottom: 6em;
    background-color: #F8F8F8;
    
}

.reference h3{
    margin: 0 auto;
    font-size: 2em;
    max-width: 22em;
    line-height: 1.3em;
    font-weight: 400;
    margin-bottom: 1em;
}

.reference p{
    font-family: proxima-nova, sans-serif;
    color: #BEBEBE;
    margin-bottom: .5em;
    font-size: 1.1em;
    text-transform: uppercase;
    font-weight: 300
}

@media only screen and (max-width: 60em){
    .reference h3{font-size: 1.5em}
    .reference p{font-size: .9em}
}

/*---------------------ART BANNER-----------------------*/

.art_banner{
    margin: 0 auto 6em auto;
    padding: 0 2.5%;
    max-width: 68em;
}

.art_banner_image{
    border-radius: 1em;
    height: 75vh;
    filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.3));
    -webkit-filter: drop-shadow(0 1em 2em rgba(0, 0, 0, 0.3));
    background-image: url(media/art_banner.jpg);
    background-position: 20% 40%;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 35em
}

.art_banner_text{
    position: relative;
    top: 45%;
    left: 5%;
}

@media only screen and (max-width: 45em){
.art_banner_text{top: 55%; left: 2em;}
}

.art_banner h1, .art_banner h3{
    color: #FFF;
    max-width: 12em
}

.art_banner button{
    margin-top: 2.5em;
    color: #FFF;
    border: #FFF solid 2px;
}

.art_banner button:hover{
    color: #242424;
    background-color: #FFF;
}




    
/*----------------FOOTER-----------------*/

footer p{
    margin: 2em;
    font-size: 1em;
    color: #5555;
    text-align: center;
}

